<resources>
    <string name="app_name">Online Veterinary Doctor</string>
    <string name="web_client_id">535340234356-v4poo64kpmg0h4g7n0ll9ts8if81g14o.apps.googleusercontent.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient">Patient</string>
    <string name="medicine">Medicine</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="work_experience">Work experience</string>
    <string name="education">Education</string>
    <string name="login">Doctor Login</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? <b>Sign Up</b> </string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="animals">Animals</string>
    <string name="animals_info">Animals info</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="color">Color</string>
    <string name="animal_type">Animal type</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="width_height">Width Height</string>
    <string name="animal_image">Animal image</string>
    <string name="additions">Additions</string>
    <string name="edit">Edit</string>
    <string name="language">Language</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="time">Time</string>
</resources>